// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiDualRange allows value prop to accept empty strings 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiRangeSlider--hasRange euiDualRange__slider emotion-euiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
</div>
`;

exports[`EuiDualRange allows value prop to accept numbers 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiRangeSlider--hasRange euiDualRange__slider emotion-euiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange input props can be applied to min and max inputs 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper"
>
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="Min value"
        class="euiFieldNumber euiRangeInput euiRangeInput--min emotion-euiRangeInput"
        max="8"
        min="1"
        name="name-minValue"
        step="1"
        style="width:3.6em"
        type="number"
        value="1"
      />
    </div>
  </div>
  <div
    class="euiRange__horizontalSpacer"
  />
  <div
    aria-hidden="true"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiRangeSlider--hasRange euiDualRange__slider emotion-euiRangeSlider"
      id="id"
      max="10"
      min="1"
      name="name"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-left:0%;width:77.77777777777779%"
      />
    </div>
  </div>
  <div
    class="euiRange__horizontalSpacer"
  />
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="Max value"
        class="euiFieldNumber euiRangeInput euiRangeInput--max emotion-euiRangeInput"
        max="10"
        min="1"
        name="name-maxValue"
        step="1"
        style="width:3.6em"
        type="number"
        value="8"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange is rendered 1`] = `
<div
  class="euiRangeWrapper euiDualRange testClass1 testClass2 emotion-euiRangeWrapper"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      aria-label="aria-label"
      class="euiRangeSlider euiRangeSlider--hasRange euiDualRange__slider emotion-euiRangeSlider"
      data-test-subj="test subject string"
      id="id"
      max="100"
      min="0"
      name="name"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props compressed should render 1`] = `
<div
  class="euiRangeWrapper euiRangeWrapper--compressed euiDualRange emotion-euiRangeWrapper"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack euiRangeTrack--compressed emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiRangeSlider--hasRange euiRangeSlider--compressed euiDualRange__slider emotion-euiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight euiRangeHighlight--compressed emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props custom ticks should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack euiRangeTrack--hasTicks emotion-euiRangeTrack"
  >
    <div
      class="euiRangeTicks euiRangeTicks--isCustom emotion-euiRangeTicks"
    >
      <button
        class="euiRangeTick euiRangeTick--isCustom emotion-euiRangeTick"
        style="left:calc(-Infinity% + 8px)"
        tabindex="-1"
        title="20kb"
        type="button"
        value="20"
      >
        20kb
      </button>
      <button
        class="euiRangeTick euiRangeTick--isCustom euiRangeTick--isMax euiRangeTick--hasTickMark emotion-euiRangeTick"
        style="right:0%;margin-right:-1.25em"
        tabindex="-1"
        title="100kb"
        type="button"
        value="100"
      >
        <span
          aria-hidden="true"
          class="euiRangeTick__pseudo"
          style="margin-right:calc(1.25em + 4px)"
        />
        100kb
      </button>
    </div>
    <input
      aria-hidden="true"
      class="euiRangeSlider euiRangeSlider--hasTicks euiRangeSlider--hasRange euiDualRange__slider emotion-euiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight euiRangeHighlight--hasTicks emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-left:20%;width:80%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props disabled should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack euiRangeTrack--disabled emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiRangeSlider--hasRange euiDualRange__slider emotion-euiRangeSlider"
      disabled=""
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props fullWidth should render 1`] = `
<div
  class="euiRangeWrapper euiRangeWrapper--fullWidth euiDualRange emotion-euiRangeWrapper"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiRangeSlider--hasRange euiDualRange__slider emotion-euiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props inputs should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange testClass1 testClass2 emotion-euiRangeWrapper"
>
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="aria-label"
        class="euiFieldNumber euiRangeInput euiRangeInput--min emotion-euiRangeInput"
        max="8"
        min="0"
        name="name-minValue"
        step="1"
        style="width:4.4em"
        type="number"
        value="1"
      />
    </div>
  </div>
  <div
    class="euiRange__horizontalSpacer"
  />
  <div
    aria-hidden="true"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      aria-label="aria-label"
      class="euiRangeSlider euiRangeSlider--hasRange euiDualRange__slider emotion-euiRangeSlider"
      data-test-subj="test subject string"
      id="id"
      max="100"
      min="0"
      name="name"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
  </div>
  <div
    class="euiRange__horizontalSpacer"
  />
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="aria-label"
        class="euiFieldNumber euiRangeInput euiRangeInput--max emotion-euiRangeInput"
        max="100"
        min="1"
        name="name-maxValue"
        step="1"
        style="width:4.4em"
        type="number"
        value="8"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props isDraggable should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiRangeSlider--hasRange euiDualRange__slider emotion-euiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props labels should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper"
>
  <label
    class="euiRangeLabel euiRangeLabel--min emotion-euiRangeLabel"
  >
    0
  </label>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiRangeSlider--hasRange euiDualRange__slider emotion-euiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
  </div>
  <label
    class="euiRangeLabel euiRangeLabel--max emotion-euiRangeLabel"
  >
    100
  </label>
</div>
`;

exports[`EuiDualRange props levels should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack euiRangeTrack--hasLevels emotion-euiRangeTrack"
  >
    <div
      class="euiRangeLevels"
    >
      <span
        class="euiRangeLevel euiRangeLevel--danger"
        style="left:calc(0% + 0px);right:calc(100% - 0px)"
      />
      <span
        class="euiRangeLevel euiRangeLevel--success"
        style="left:calc(0% + 0px);right:calc(100% - 0px)"
      />
    </div>
    <input
      aria-hidden="true"
      class="euiRangeSlider euiRangeSlider--hasRange euiDualRange__slider emotion-euiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props loading should display when showInput="inputWithPopover" 1`] = `
<div
  class="euiPopover euiInputPopover euiRange__popover emotion-euiPopover-EuiInputPopover"
>
  <div
    class="euiPopover__anchor css-zih94u-render"
  >
    <div>
      <div
        class="euiFormControlLayout euiFormControlLayoutDelimited"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-label="aria-label"
            class="euiFieldNumber euiFormControlLayoutDelimited__input emotion-euiRangeInput"
            max="8"
            min="0"
            name="name-minValue"
            step="1"
            type="number"
            value="1"
          />
          <div
            class="euiText euiFormControlLayoutDelimited__delimeter emotion-euiText-s-euiTextColor-subdued"
          >
            →
          </div>
          <input
            aria-label="aria-label"
            class="euiFieldNumber euiFormControlLayoutDelimited__input emotion-euiRangeInput"
            max="100"
            min="1"
            name="name-maxValue"
            step="1"
            type="number"
            value="8"
          />
          <div
            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
          >
            <span
              aria-label="Loading"
              class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
              role="progressbar"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props range should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiRangeSlider--hasRange euiDualRange__slider emotion-euiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props slider should display in popover 1`] = `
<div
  class="euiPopover euiInputPopover euiRange__popover emotion-euiPopover-EuiInputPopover"
>
  <div
    class="euiPopover__anchor css-zih94u-render"
  >
    <div>
      <div
        class="euiFormControlLayout euiFormControlLayoutDelimited"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-label="aria-label"
            class="euiFieldNumber euiFormControlLayoutDelimited__input emotion-euiRangeInput"
            max="8"
            min="0"
            name="name-minValue"
            step="1"
            type="number"
            value="1"
          />
          <div
            class="euiText euiFormControlLayoutDelimited__delimeter emotion-euiText-s-euiTextColor-subdued"
          >
            →
          </div>
          <input
            aria-label="aria-label"
            class="euiFieldNumber euiFormControlLayoutDelimited__input emotion-euiRangeInput"
            max="100"
            min="1"
            name="name-maxValue"
            step="1"
            type="number"
            value="8"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props ticks should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack euiRangeTrack--hasTicks emotion-euiRangeTrack"
  >
    <div
      class="euiRangeTicks emotion-euiRangeTicks"
    >
      <button
        class="euiRangeTick emotion-euiRangeTick"
        style="left:calc(NaN% + 8px);max-width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="0"
      >
        0
      </button>
      <button
        class="euiRangeTick emotion-euiRangeTick"
        style="left:calc(-Infinity% + 8px);max-width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="20"
      >
        20
      </button>
      <button
        class="euiRangeTick emotion-euiRangeTick"
        style="left:calc(-Infinity% + 8px);max-width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="40"
      >
        40
      </button>
      <button
        class="euiRangeTick emotion-euiRangeTick"
        style="left:calc(-Infinity% + 8px);max-width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="60"
      >
        60
      </button>
      <button
        class="euiRangeTick emotion-euiRangeTick"
        style="left:calc(-Infinity% + 8px);max-width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="80"
      >
        80
      </button>
      <button
        class="euiRangeTick emotion-euiRangeTick"
        style="left:calc(-Infinity% + 8px);max-width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="100"
      >
        100
      </button>
    </div>
    <input
      aria-hidden="true"
      class="euiRangeSlider euiRangeSlider--hasTicks euiRangeSlider--hasRange euiDualRange__slider emotion-euiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight euiRangeHighlight--hasTicks emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
  </div>
</div>
`;
